--- a/i18n/fr/docusaurus-plugin-content-docs/current/02.install/40.post_install/_category_.yaml
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/02.install/40.post_install/_category_.yaml
@@ -1,4 +1,4 @@
-label: After installation
+label: Après l’installation
 link:
   type: generated-index
-  description: Configure your network to access your server
+  description: Configurez votre réseau pour accéder à votre serveur
