--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/05.guidelines.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/05.guidelines.mdx
@@ -1,5 +1,5 @@
 ---
-title: Advices and guidelines
+title: Conseils et ligne directrices
 ---
 
 This page lists some advice and guidelines which every YunoHost administrator should be aware to take care of a YunoHost server :)
