--- a/i18n/fr/docusaurus-plugin-content-docs/current/02.install/40.post_install/15.isp_box_config.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/02.install/40.post_install/15.isp_box_config.mdx
@@ -1,55 +1,60 @@
 ---
-title: Configure port-forwarding
+title: Configurer la redirection des ports
 ---
 
 import Figure from '@site/src/components/Figures';
 
-If you are self-hosting at home and without a VPN, you need to forward ports on your home router ("Internet box"). The sketch below tries to briefly summarize the role and necessity of port forwarding when setting up a server at home.
+Si vous vous auto-hébergez à la maison et sans VPN, il vous faut rediriger les ports de votre routeur ("machin-box"). Le schéma ci-dessous tente d'expliquer brièvement le rôle de la redirection des ports lors de la mise en place d'un serveur à la maison.
 
-<Figure caption="Illustration of the importance of port-forwarding" src="/img/portForwarding_en.png" />
+<Figure caption="Illustration sur l’importance de la redirection des ports" src="/img/portForwarding_en.png" />
 
-### 0. Diagnose ports opened
+### 1. Diagnostiquer les ports ouverts
 
-The new diagnosis tool introduced in 3.8 can be used to diagnose that ports are
-correctly exposed.
+Une fois les redirections configurées, l'outil de diagnostic introduit dans
+YunoHost 3.8 vous permettra de vérifier si les ports sont correctement exposés.
 
-### 1. Access your box/router administration interface
+### 2. Accéder à l'interface d'administration de votre box/routeur
 
-Your box/router admin interface is usually reachable via [http://192.168.0.1](http://192.168.0.1) or [http://192.168.1.1](http://192.168.1.1). Then, you will probably need to authenticate yourself the credentials given by your internet server provider.
+L'interface d'administration est généralement accessible via [http://192.168.0.1](http://192.168.0.1) ou [http://192.168.1.1](http://192.168.1.1).
+Ensuite, il vous faudra peut-être vous authentifier avec les identifiants
+fournis par votre fournisseur d'accès à Internet (FAI).
 
-### 2. Find the local IP of your server
+### 3. Trouver l'IP locale de votre serveur
 
-Identify the *local* IP of your server, either :
+Identifiez quelle est l'IP locale de votre serveur, soit :
 
-- from your box/router interface, which might list devices connected
-- from the YunoHost webadmin, in 'Diagnosis', section 'Internet connectivity', click on 'Details' on the IPv4 report.
-- from the command line in your server, by running `hostname -I`
+- depuis l'interface de votre routeur/box, qui liste peut-être les dispositifs
+  connectés;
+- depuis la webadmin de YunoHost, dans 'Diagnostic', section 'Connectivité Internet', cliquer sur 'Détails' à côté de la ligne sur IPv4.
+- depuis la webadmin de YunoHost, dans 'État du serveur', 'Réseau';
 
-A local IP address typically looks like `192.168.xx.yy`, or `10.0.xx.yy`.
+Une adresse IP locale ressemble généralement à `192.168.xx.yy`, ou `10.0.xx.yy`.
 
-The local IP address needs to be static, so that the port forwards that you are going to configure in the next step will always reach your server. You should go into your box/router and make sure that the local IP address of your server is static instead of dynamic.
+### 4. Rediriger les ports
 
-### 3. Forwarding ports
+Dans l'interface d'administration de votre box/routeur, il vous faut trouver
+une catégorie comme 'Configuration du routeur', ou 'Redirections de ports'. Le
+nom diffère suivant le type / marque de la box...
 
-In your router admin interface, look for something like 'router configuration' or 'port forwarding'. The naming differs among the various kinds of boxes.
+Il vous faut ensuite rediriger chacun des ports listés ci-dessous vers l'IP locale de votre serveur pour que les différents services de YunoHost fonctionnent. Pour chacun d'eux, une redirection 'TCP' est nécessaire. Certaines interfaces font référence à un port « externe » et un port « interne » : dans notre cas il s'agit du même.
 
-Opening the ports listed below is necessary for the various services available in YunoHost to work. For each of them, the 'TCP' forwarding is needed. Some interfaces refer to 'external' and 'internal' ports : these are the same in our case.
-
-- Web: `80` <small>(HTTP)</small>, `443` <small>(HTTPS)</small>
-- [SSH](/administer/admin_guide/command_line): `22`
-- [XMPP](https://wikipedia.org/wiki/XMPP): `5222` <small>(clients)</small>, `5269` <small>(servers)</small>
-- [Email](/administer/admin_guide/email): `25`, `587` <small>(SMTP)</small>, `993` <small>(IMAP)</small>
+- Web : `80` <small>(HTTP)</small>, `443` <small>(HTTPS)</small>
+- [SSH](/administer/admin_guide/command_line) : `22`
+- [XMPP](https://wikipedia.org/wiki/XMPP) : `5222` <small>(clients)</small>, `5269` <small>(serveurs)</small>
+- [Email](/administer/admin_guide/email) : `25`, `587` <small>(SMTP)</small>, `993` <small>(IMAP)</small>
 
 If you use both a modem and a router, then you need to do the following:
 
 1. first on the modem (the box closest to the internet) create rules to forward the above ports to your router;
 2. then on the router (the box between the modem and your devices) create rules to forward the above ports to the static IP address for your server.
 
-! [fa=exclamation-triangle /] Some internet service providers block port 25 (mail SMTP) by default to fight spam. Some other ISP don't allow to use port 80/443 (web) freely, though it's less likely. Depending on the ISP, it might be possible to open them in the admin interface... Check [this page](/install/providers/isp/) for more info.
+:::warning
+<FAIcon icon="fa-exclamation-triangle"/> Certains fournisseurs d'accès à Internet bloquent le port 25 (mail SMTP) par défaut pour combattre le spam. D'autres (plus rares) ne permettent pas d'utiliser librement les ports 80/443. En fonction de votre FAI, il peut être possible d'ouvrir ces ports dans l'interface... Voir [cette page](/install/providers/isp/) pour plus d'informations.
+:::
 
-## Automatic port forwarding / UPnP
+## Redirection automatique / UPnP
 
-A technology called UPnP is available on some internet boxes / routers and allows to automatically forward ports by the machine who needs them. If UPnP is enabled in your local network, then running this command should automatically open the port for you :
+Une technologie nommée UPnP est disponible sur certains routeurs/box et permet de rediriger automatiquement des ports vers une machine qui le demande. Si UPnP est activé chez vous, exécuter cette commande devrait automatiquement rediriger les bons ports :
 
 ```bash
 sudo yunohost firewall reload
