--- a/i18n/fr/docusaurus-plugin-content-docs/current/02.install/10.providers/10.isp/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/02.install/10.providers/10.isp/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: Internet service providers
-description: The guys that provide the internet line and router
+title: Fournisseurs d’accès à Internet
+description: Ceux qui fournissent vos ligne internet et router
 ---
 
 import Tabs from '@theme/Tabs';
