--- a/i18n/fr/docusaurus-plugin-content-docs/current/02.install/10.providers/20.servers.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/02.install/10.providers/20.servers.mdx
@@ -1,18 +1,18 @@
 ---
-title: Server providers
-description: The guys that provide someone else's computer
+title: Fournisseurs de serveurs
+description: Ceux qui fournissent un ordinateur tiers
 ---
 
 import {HighlightFFDN, HighlightNonProfit, HighlightCHATONS} from '@site/src/components/Highlight';
 
-## Pre-installed YunoHost Offers
+## Offres avec YunoHost préinstallé
 
 * [Alsace Réseau Neutre](https://arn-fai.net) (VPS) <HighlightFFDN/> <HighlightCHATONS/>
 
 * [ECOWAN](https://ecowan.fr) (VPS)
 
-* [Scaleway Dedibox](https://www.scaleway.com/en/dedibox/operating-systems/) (dedicated server)
+* [Scaleway Dedibox](https://www.scaleway.com/en/dedibox/operating-systems/) (server dédié)
 
-## YunoHost IT outsourcing
+## Externalisation informatique YunoHost 
 
-* [ReflexLibre](https://reflexlibre.net) (France only) <HighlightCHATONS/>
+* [ReflexLibre](https://reflexlibre.net) (seulement en France) <HighlightCHATONS/>
