--- a/i18n/fr/code.json
+++ b/i18n/fr/code.json
@@ -4,7 +4,7 @@
     "description": "The title of the 404 page"
   },
   "theme.NotFound.p2.editLinkText": {
-    "message": "editing it",
+    "message": "Éditer",
     "description": "The label for the edit page link"
   },
   "theme.ErrorPageContent.title": {
