--- a/i18n/fr/docusaurus-plugin-content-docs/current/06.contribute/05.write_documentation/02.markdown_guide.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/06.contribute/05.write_documentation/02.markdown_guide.mdx
@@ -95,7 +95,7 @@ All that remains is to designate the anchor to the text you want to make interac
 [My Anchor that refers to the title of the tables](#tables)
 ```
 
-[My Anchor Returns to Lists](#lists)
+[My Anchor Returns to Lists](#anchorname)
 
 [My Anchor that refers to the title of the tables](#tables)
 
@@ -181,7 +181,7 @@ You get:
 3. List 5
 4. list 6
 
-### Unordered lists<a name="anchorname"></a>
+### <span id="anchorname">Unordered lists</span>
 
 To create an unordered list, use the symbols `*`, `+` or `*`. This will not change the appearance of the marker in the text output. It is the incrementing of the list that will define the visual. For a better reading of the plain text, it may be good to use the different symbols to mark the increment, but it is the three spaces before the sub-list that will indicate the increment.
 As such:
