--- a/i18n/fr/docusaurus-plugin-content-docs/current/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/index.mdx
@@ -3,7 +3,7 @@ title: "Docs introduction"
 sidebar_position: 0
 ---
 
-# Bienvenue dans la documentation de YunoHost !
+# Welcome to the YunoHost documentation!
 
 This is the documentation for [YunoHost, a libre operating system aiming to simplify server administration and democratize self-hosting](/overview/what_is_yunohost).
 
@@ -11,7 +11,7 @@ As a soon-to-be administrator of your own server, go to the [Admin guide](/categ
 
 You can check out the [application catalog](https://apps.yunohost.org) to browse apps that can be installed on a server (though you can also explore it directly from your admin interface).
 
-The [Community](/category/community) is here for you if you need some help : come [chat](/community/chat_rooms) with us or reach out on the [forum](/community/forum)!
+The [Community](/category/community) is here for you if you need some help: come [chat](/community/chat_rooms) with us or reach out on the [forum](/community/forum)!
 
 {/*
 TODO:
@@ -29,6 +29,8 @@ TODO:
 <a href="https://yunohost.org/" class="btn btn-lg inline"><i class="fa fa-fw fa-arrow-left"></i> Go back to the homepage</a>
 [/center]
 
-!!!! To navigate this documentation, you can use your left and right arrow keys. Browse directly to the section you want with the [fa=bars /] side panel, or using the [fa=search /] search box. Enjoy!
+:::tip
+To navigate this documentation, you can use your left and right arrow keys. Browse directly to the section you want with the <FAIcon icon="fa-bars"/> side panel, or using the <FAIcon icon="fa-search"/> search box. Enjoy!
+:::
 
 */}
