--- a/i18n/fr/docusaurus-plugin-content-docs/current/05.community/40.press_kit.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/05.community/40.press_kit.mdx
@@ -2,10 +2,12 @@
 title: Communication
 ---
 {/* 
-! TODO: Add logo and kakemono file  
-! TODO: Add kakemono photo <https://matrix-client.matrix.org/_matrix/media/r0/download/pijean.ovh/TqtyOjqllOeSXYziawxeGzIP>  
-! TODO: Add "About YunoHost" section  
-! TODO: Add email contact 
+:::note
+TODO: Add logo and kakemono file  
+TODO: Add kakemono photo <https://matrix-client.matrix.org/_matrix/media/r0/download/pijean.ovh/TqtyOjqllOeSXYziawxeGzIP>  
+TODO: Add "About YunoHost" section  
+TODO: Add email contact  
+:::
 */}
 
 ## Talks / conf
