--- a/i18n/fr/docusaurus-plugin-content-docs/current/02.install/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/02.install/index.mdx
@@ -1,31 +1,34 @@
+---
+title: "Installation"
+sidebar_position: 0
+---
+
 import Link from '@docusaurus/Link';
 
-# Choose your selfhosting method and providers
+Vous pouvez vous auto-héberger à la maison (sur un petit ordinateur), ou sur un serveur distant. Chaque solution a ses avantages et inconvénients :
 
-You can host yourself at home (on a small computer), or on a remote server. Each solution has their pros and cons:
+### À la maison, par exemple sur une carte ARM ou un ancien ordinateur
 
-## At home, for instance on an ARM board or an old computer
+Vous pouvez vous héberger chez vous, sur une carte ARM ou un vieil ordinateur, connecté à votre box internet.
 
-You can host yourself at home with an ARM board or a re-purposed regular computer, connected to your home router/box.
+- **Avantages** : vous aurez un contrôle physique sur la machine et avez seulement besoin d'acheter le matériel initial ;
+- **Inconvénients** : il vous faudra [configurer manuellement votre box internet](/install/post_install/isp_box_config) et serez possiblement [limité par certains aspects de votre fournisseur d'accès à Internet](/install/providers/isp/).
 
-- **Pros**  : you will have physical control of the machine and only need to buy the hardware;
-- **Cons**  : you will have to [manually configure your internet box](/install/post_install/isp_box_config) and [might be limited by your ISP](/install/providers/isp/).
+### À la maison, derrière un VPN
 
-## At home, behind a VPN
+Un VPN est un tunnel chiffré entre deux machines. En pratique, cela permet de faire « comme si » une machine était connectée depuis ailleurs. Ceci permet de s'auto-héberger à la maison tout en contournant les limitations du fournisseur d'accès à Internet. Voir aussi [le projet Brique Internet](https://labriqueinter.net/) et [la FFDN](https://www.ffdn.org/).
 
-A VPN is an encrypted tunnel between two machines. In practice, it makes it "as if" you were directly, locally, connected to your server machine, but actually from somewhere else on the Internet. This allows you to still host yourself at home, while bypassing possible limitations of your ISP. See also [the Internet Cube project](https://internetcu.be/) and [the FFDN](https://www.ffdn.org/).
+- **Avantages** : vous aurez un contrôle physique sur la machine, et le VPN permettra de cacher votre trafic vis-à-vis de votre FAI ainsi que de contourner ses limitations ;
+- **Inconvénients** : il vous faudra payer des frais mensuels pour le VPN.
 
-- **Pros**: you will have physical control of the machine, and the VPN hides your traffic from your ISP and allows you to bypass its limitations;
-- **Cons**: you will have to pay a monthly subscription for the VPN.
+### Sur un serveur distant (VPS ou serveur dédié)
 
-## On a remote server (VPS or dedicated server)
+Vous pouvez louer un serveur privé virtuel ou une machine dédiée à des hébergeurs [associatifs](https://db.ffdn.org/) ou [commerciaux](/providers/server).
 
-You can rent a virtual private server or a dedicated machine from [associative](https://db.ffdn.org/) or [commercial](/install/providers/servers) "Cloud" providers.
+- **Avantages** : votre serveur sera rapide et la connectivité internet sera bonne ;
+- **Inconvénients** : il vous faudra payer des frais mensuels pour la machine, et vous n'aurez pas de contrôle physique dessus.
 
-- **Pros**: your server and its internet connectivity will be fast;
-- **Cons**: you will have to pay a monthly subscription and won't have physical control of your server.
-
-## Summary
+### Résumé
 
 export const styleNone = {
   textAlign: 'center',
@@ -47,55 +50,55 @@ export const styleDanger = {
   <thead>
     <tr>
       <th></th>
-      <th style={styleNone}>At home<br/><small>(e.g. ARM board, old computer)</small></th>
-      <th style={styleNone}>At home<br/>behind a VPN</th>
-      <th style={styleNone}>On a remote server<br/>(VPS or dedicated)</th>
+      <th style={styleNone}>À la maison<br/><small>(ex. carte ARM, vieil ordinateur)</small></th>
+      <th style={styleNone}>À la maison<br/>derrière un VPN</th>
+      <th style={styleNone}>Sur un serveur distant<br/>(VPS ou dédié)</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td style={styleNone}>Hardware cost</td>
-      <td style={styleMeh} colspan="2">About 50€<br/><small>(e.g. a Raspberry Pi)</small></td>
-      <td style={styleGood}>None</td>
+      <td style={styleNone}>Coûts matériels</td>
+      <td style={styleMeh} colspan="2">Environ 50€<br/><small>(ex. un Raspberry Pi)</small></td>
+      <td style={styleGood}>Non</td>
     </tr>
     <tr>
-      <td style={styleNone}>Monthly cost</td>
-      <td style={styleGood}>Negligible<br/><small>(electricity)</small></td>
-      <td style={styleMeh}>Around 5€<br/><small>(VPN)</small></td>
-      <td style={styleMeh}>Starting at ~3€<br/><small>(VPS)</small></td>
+      <td style={styleNone}>Coûts mensuels</td>
+      <td style={styleGood}>Négligeables<br/><small>(électricité)</small></td>
+      <td style={styleMeh}>Environ 5€<br/><small>(VPN)</small></td>
+      <td style={styleMeh}>À partir de ~3€<br/><small>(VPS)</small></td>
     </tr>
     <tr>
-      <td style={styleNone}>Physical controlof the machine</td>
-      <td style={styleGood}>Yes</td>
-      <td style={styleGood}>Yes</td>
-      <td style={styleDanger}>No</td>
+      <td style={styleNone}>Contrôle physique de la machine</td>
+      <td style={styleGood}>Oui</td>
+      <td style={styleGood}>Oui</td>
+      <td style={styleDanger}>Non</td>
     </tr>
     <tr>
-      <td style={styleNone}>Manual port routing required</td>
-      <td style={styleMeh}>Yes</td>
-      <td style={styleGood}>No</td>
-      <td style={styleGood}>No</td>
+      <td style={styleNone}>Routage manuel de ports requis</td>
+      <td style={styleMeh}>Oui</td>
+      <td style={styleGood}>Non</td>
+      <td style={styleGood}>Non</td>
     </tr>
     <tr>
-      <td style={styleNone}>Possible ISP limitations</td>
-      <td style={styleDanger}>Yes<br/><small>(see <Link to="./providers/isps">here</Link>)</small></td>
-      <td style={styleGood}>Bypassed by VPN</td>
-      <td style={styleGood}>Typically no</td>
+      <td style={styleNone}>Limitations FAI possibles</td>
+      <td style={styleDanger}>Oui<br/><small>(Voyez <Link to="./providers/isp">ici</Link>)</small></td>
+      <td style={styleGood}>Contournées par VPN</td>
+      <td style={styleGood}>En général non</td>
     </tr>
     <tr>
       <td style={styleNone}>CPU</td>
-      <td style={styleMeh} colspan="2">Typically ~1 GHz</td>
+      <td style={styleMeh} colspan="2">En général ~1 GHz</td>
       <td style={styleGood}>~2 GHz<br/><small>(Digital Ocean droplet)</small></td>
     </tr>
     <tr>
       <td style={styleNone}>RAM</td>
-      <td style={styleMeh} colspan="2">Typically 500 Mb or 1 Gb</td>
-      <td style={styleMeh}>Related to server cost</td>
+      <td style={styleMeh} colspan="2">En général 500 Mb or 1 Gb</td>
+      <td style={styleMeh}>Coûts liés au serveur</td>
     </tr>
     <tr>
-      <td style={styleNone}>Internet connectivity</td>
-      <td style={styleMeh} colspan="2">Depends on home connectivity</td>
-      <td style={styleGood}>Typically pretty good</td>
+      <td style={styleNone}>Connexion internet</td>
+      <td style={styleMeh} colspan="2">Dépend de la connexion chez soi</td>
+      <td style={styleGood}>Généralement bonne</td>
     </tr>
   </tbody>
 </table>
