translations : some tabels

--- a/i18n/fr/docusaurus-plugin-content-docs/current/02.install/10.providers/05.registrar/gandi.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/02.install/10.providers/05.registrar/gandi.mdx
@@ -3,14 +3,14 @@ sidebar_label: Gandi
 title: Obtaining an API key from Gandi
 ---
 
-This page is meant to guide you in obtaining an API key from Gandi in order to configure YunoHost's automatic DNS configuration mecanism
+Cette page a pour but de vous guider dans l'obtention d'une clé API auprès de Gandi afin de configurer le mécanisme de configuration automatique des DNS de YunoHost.
 
 :::caution
-**DO NOT share your API tokens with anybody!** A malicious attacker obtaining your tokens could take over your domain, and possibly your server!
+**NE partagez vos cléfs API avec PERSONNE !** Un attaquant malveillant qui obtiendrait vos jetons pourrait prendre le contrôle de votre domaine, et éventuellement de votre serveur !
 :::
 
-1. Go to [https://account.gandi.net/](https://account.gandi.net/)
-2. You should land on this page. Then click on 'Security'
+1. Allez à [https://account.gandi.net/](https://account.gandi.net/)
+2. Vous devriez arriver sur cette page. Cliquez ensuite sur 'Security'
   ![](/img/registrar_api_gandi_1.png)
-3. In the next page, click on '(re)Generate the API key'.
+3. Dans la page suivante, clickez sur '(re)Generate the API key'.
   ![](/img/registrar_api_gandi_2.png)
