--- a/i18n/fr/docusaurus-plugin-content-docs/current/02.install/10.providers/05.registrar/namecheap.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/02.install/10.providers/05.registrar/namecheap.mdx
@@ -1,16 +1,16 @@
 ---
 sidebar_label: Namecheap
-title: Obtaining an API key from Namecheap
+title: Obtenir une clef API de Namecheap
 ---
 
-See the [API Documentation](https://www.namecheap.com/support/api/intro/) for reference.
+Voir la [documentation de l'API](https://www.namecheap.com/support/api/intro/) pour référence.
 
-1. Login to your Namecheap account.
+1. Connectez-vous à votre compte Namecheap.
 
-2. Go to the Profile > Tools menu.
+2. Allez dans le menu Profil > Outils.
 
-3. Scroll down to the Business & Dev Tools section. Click on MANAGE next to Namecheap API Access.
+3. Faites défiler vers le bas jusqu'à la section Business & Dev Tools. Cliquez sur MANAGE à côté de Namecheap API Access.
 
-4. Toggle ON/OFF, read our Terms of Service, enter your account password.
+4. Basculez sur ON/OFF, lisez nos Conditions d'utilisation, entrez le mot de passe de votre compte.
 
-5. After enabling API access, you will be allotted an APIKey. Your Namecheap account username will act as API username. Your access to the API is authenticated using these elements.
+5. Après avoir activé l'accès à l'API, une clé API vous sera attribuée. Le nom d'utilisateur de votre compte Namecheap servira de nom d'utilisateur pour l'API. Votre accès à l'API est authentifié à l'aide de ces éléments.
