reuse translations of all languages for docs homepage

--- a/i18n/de/docusaurus-plugin-content-docs/current/index.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/index.mdx
@@ -5,32 +5,32 @@ sidebar_position: 0
 
 # Welcome to the YunoHost documentation!
 
-This is the documentation for [YunoHost, a libre operating system aiming to simplify server administration and democratize self-hosting](/overview/what_is_yunohost).
+Dies ist die Dokumentation von [YunoHost, einem freien Betriebssystem, das die Serververwaltung vereinfachen und das Selbsthosting demokratisieren soll](/overview/what_is_yunohost).
 
-As a soon-to-be administrator of your own server, go to the [Admin guide](/category/administration-guide) to learn more about self-hosting, how to install your YunoHost server and install your first apps.
+Weitere Informationen zum Selbsthosting, zur Installation deines eigenen YunoHost-Servers und zur Installation der ersten Apps.
 
-You can check out the [application catalog](https://apps.yunohost.org) to browse apps that can be installed on a server (though you can also explore it directly from your admin interface).
+Du kannst in den [Anwendungskatalog](https://apps.yunohost.org) schauen, um die Apps anzusehen, die auf deinem Server installiert werden können (Natürlich geht das auch direkt über deine Administrationsoberfläche!).
 
-The [Community](/category/community) is here for you if you need some help: come [chat](/community/chat_rooms) with us or reach out on the [forum](/community/forum)!
+Wenn du Hilfe benötigst, ist die [Community](/category/community) für dich da: [Chatte](/community/chat_rooms) mit uns oder schau in das [Forum](/community/forum)!
 
 {/*
 TODO:
 
 [center]
 
-<a href="/admindoc" class="btn btn-lg btn-primary inline"><i class="fa fa-cogs"></i> Administrator's guide</a>
-<a href="/apps" class="btn btn-lg btn-success inline"><i class="fa fa-cubes"></i> Applications</a>
+<a href="/admindoc" class="btn btn-lg btn-primary inline"><i class="fa fa-cogs"></i> Administratorhandbuch</a>
+<a href="/apps" class="btn btn-lg btn-success inline"><i class="fa fa-cubes"></i> Anwendungen</a>
 <a href="/community" class="btn btn-lg btn-primary" style="background: blueviolet;border-color: blueviolet;"><i class="fa fa-users"></i> Community</a>
-<a href="/contribute" style="background: orange; border-color: orange;" class="btn btn-lg btn-error"><i class="fa fa-heart"></i> Get involved</a>
+<a href="/contribute" style="background: orange; border-color: orange;" class="btn btn-lg btn-error"><i class="fa fa-heart"></i> Beteilige dich</a>
 
 [/center]
 
 [center]
-<a href="https://yunohost.org/" class="btn btn-lg inline"><i class="fa fa-fw fa-arrow-left"></i> Go back to the homepage</a>
+<a href="https://yunohost.org/" class="btn btn-lg inline"><i class="fa fa-fw fa-arrow-left"></i> Zurück zur Homepage</a>
 [/center]
 
 :::tip
-To navigate this documentation, you can use your left and right arrow keys. Browse directly to the section you want with the <FAIcon icon="fa-bars"/> side panel, or using the <FAIcon icon="fa-search"/> search box. Enjoy!
+!!!! Um in diesem Dokument zu navigieren, kannst du die linke und rechte Pfeiltaste verwenden. Navigiere mit dem [fa=bars /] Seitenbereich oder über das [fa=search /] Suchfeld direkt zu dem gewünschten Abschnitt. Viel Spaß!
 :::
 
 */}
