--- a/i18n/es/docusaurus-plugin-content-docs/current/index.mdx
+++ b/i18n/es/docusaurus-plugin-content-docs/current/index.mdx
@@ -5,32 +5,32 @@ sidebar_position: 0
 
 # Welcome to the YunoHost documentation!
 
-This is the documentation for [YunoHost, a libre operating system aiming to simplify server administration and democratize self-hosting](/overview/what_is_yunohost).
+Estás en la documentación de [YunoHost, un sistema operativo libre con el objeto de simplificar la administración de servidores y democratizar el auto-hospedaje web](/overview/what_is_yunohost).
 
-As a soon-to-be administrator of your own server, go to the [Admin guide](/category/administration-guide) to learn more about self-hosting, how to install your YunoHost server and install your first apps.
+Como proxima administradora de tu servidor, visita la [Guía de administración](/admindoc) para aprender más del auto-hospedaje web, Como instalar tu servidor YunoHost y añadirle las primeras apps.
 
-You can check out the [application catalog](https://apps.yunohost.org) to browse apps that can be installed on a server (though you can also explore it directly from your admin interface).
+Échale un ojo al [catálogo de aplicaciones](https://apps.yunohost.org) para navegar las aplicaciones disponibles (¡aunque también puedes verlas directamente en la interfaz de administración!)
 
-The [Community](/category/community) is here for you if you need some help: come [chat](/community/chat_rooms) with us or reach out on the [forum](/community/forum)!
+La [Comunidad](/category/community) esta disponible para ayudarte : entra en el [chat](/community/chat_rooms) o contáctanos por el [foro](/community/forum) !
 
 {/*
 TODO:
 
 [center]
 
-<a href="/admindoc" class="btn btn-lg btn-primary inline"><i class="fa fa-cogs"></i> Administrator's guide</a>
-<a href="/apps" class="btn btn-lg btn-success inline"><i class="fa fa-cubes"></i> Applications</a>
-<a href="/community" class="btn btn-lg btn-primary" style="background: blueviolet;border-color: blueviolet;"><i class="fa fa-users"></i> Community</a>
-<a href="/contribute" style="background: orange; border-color: orange;" class="btn btn-lg btn-error"><i class="fa fa-heart"></i> Get involved</a>
+<a href="/admindoc" class="btn btn-lg btn-primary inline"><i class="fa fa-cogs"></i> Guía de administración</a>
+<a href="/apps" class="btn btn-lg btn-success inline"><i class="fa fa-cubes"></i> Catálogo de aplicaciones</a>
+<a href="/community" class="btn btn-lg btn-primary" style="background: blueviolet;border-color: blueviolet;"><i class="fa fa-users"></i> Communidad</a>
+<a href="/contribute" style="background: orange; border-color: orange;" class="btn btn-lg btn-error"><i class="fa fa-heart"></i> ¡Colabora!</a>
 
 [/center]
 
 [center]
-<a href="https://yunohost.org/" class="btn btn-lg inline"><i class="fa fa-fw fa-arrow-left"></i> Go back to the homepage</a>
+<a href="https://yunohost.org/" class="btn btn-lg inline"><i class="fa fa-fw fa-arrow-left"></i> Volver a la página principal</a>
 [/center]
 
 :::tip
-To navigate this documentation, you can use your left and right arrow keys. Browse directly to the section you want with the <FAIcon icon="fa-bars"/> side panel, or using the <FAIcon icon="fa-search"/> search box. Enjoy!
+!!!! Puedes navegar la documentación usando las flechas izquierda y derecha. Salta directamente a la sección que quieras mediante [fa=bars /] el panel lateral, o usando el campo de [fa=search /] búsqueda. ¡Disfruta!
 :::
 
 */}
