--- a/i18n/it/docusaurus-plugin-content-docs/current/index.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/index.mdx
@@ -5,32 +5,30 @@ sidebar_position: 0
 
 # Welcome to the YunoHost documentation!
 
-This is the documentation for [YunoHost, a libre operating system aiming to simplify server administration and democratize self-hosting](/overview/what_is_yunohost).
+uesto sito contiene la documentazione di [YunoHost, un sistema operativo libero che si pone come obiettivo quello di semplificare l'amministrazione di un server e democraticizzare il self-hosting](/overview/what_is_yunohost).
 
-As a soon-to-be administrator of your own server, go to the [Admin guide](/category/administration-guide) to learn more about self-hosting, how to install your YunoHost server and install your first apps.
+Nell'attesa che possiate occuparvi di un vostro server, potete cominciare a consultare la [guida dell'amministratore](/admindoc) per conoscere il self-hosting, come installare YunoHost sul vostro server e come installare le vostre prime applicazioni.
 
-You can check out the [application catalog](https://apps.yunohost.org) to browse apps that can be installed on a server (though you can also explore it directly from your admin interface).
+Potete esplorare il [catalogo delle applicazioni](https://apps.yunohost.org) installabili sul vostro server (che può essere comunque consultato direttamente dalla vostra interfaccia d'amministrazione!)
 
-The [Community](/category/community) is here for you if you need some help: come [chat](/community/chat_rooms) with us or reach out on the [forum](/community/forum)!
+La [comunità](/category/community) è disponibile se avete bisogno di aiuto: potete venire a discutere nelle [stanze di discussione](/community/chat_rooms) oppure porre le vostre domande sul [forum](/community/forum)!
 
 {/*
 TODO:
 
 [center]
 
-<a href="/admindoc" class="btn btn-lg btn-primary inline"><i class="fa fa-cogs"></i> Administrator's guide</a>
-<a href="/apps" class="btn btn-lg btn-success inline"><i class="fa fa-cubes"></i> Applications</a>
-<a href="/community" class="btn btn-lg btn-primary" style="background: blueviolet;border-color: blueviolet;"><i class="fa fa-users"></i> Community</a>
-<a href="/contribute" style="background: orange; border-color: orange;" class="btn btn-lg btn-error"><i class="fa fa-heart"></i> Get involved</a>
-
-[/center]
+<a href="/admindoc" class="btn btn-lg btn-primary inline"><i class="fa fa-cogs"></i> Guida d'amministrazione</a>
+<a href="/apps" class="btn btn-lg btn-success inline"><i class="fa fa-cubes"></i> Applicazioni</a>
+<a href="/community" class="btn btn-lg btn-primary" style="background: blueviolet;border-color: blueviolet;"><i class="fa fa-users"></i> Comunità</a>
+<a href="/contribute" style="background: orange; border-color: orange;" class="btn btn-lg btn-error"><i class="fa fa-heart"></i> Contribuire</a>
 
 [center]
-<a href="https://yunohost.org/" class="btn btn-lg inline"><i class="fa fa-fw fa-arrow-left"></i> Go back to the homepage</a>
+<a href="https://yunohost.org/" class="btn btn-lg inline"><i class="fa fa-fw fa-arrow-left"></i> Torna alla home del sito</a>
 [/center]
 
 :::tip
-To navigate this documentation, you can use your left and right arrow keys. Browse directly to the section you want with the <FAIcon icon="fa-bars"/> side panel, or using the <FAIcon icon="fa-search"/> search box. Enjoy!
+!!!! Per navigare in questa documentazione potete utilizzare i tasti freccia destra e sinistra. Navigate direttamente nella sezione che vi interessa con il [fa=bars /] pannello laterale o utilizzate il [fa=search /] box di ricerca. Enjoy!
 :::
 
 */}
