--- a/i18n/ru/docusaurus-plugin-content-docs/current/index.mdx
+++ b/i18n/ru/docusaurus-plugin-content-docs/current/index.mdx
@@ -5,32 +5,32 @@ sidebar_position: 0
 
 # Welcome to the YunoHost documentation!
 
-This is the documentation for [YunoHost, a libre operating system aiming to simplify server administration and democratize self-hosting](/overview/what_is_yunohost).
+Это документация для [YunoHost, свободной операционной системы, направленной на упрощение администрирования сервера и демократизацию самостоятельного хостинга](/overview/what_is_yunohost).
 
-As a soon-to-be administrator of your own server, go to the [Admin guide](/category/administration-guide) to learn more about self-hosting, how to install your YunoHost server and install your first apps.
+Как будущий администратор вашего собственного сервера, перейдите к [Руководству администратора](/admindoc), чтобы узнать больше о самостоятельном хостинге, о том, как установить сервер YunoHost и ваши первые приложения.
 
-You can check out the [application catalog](https://apps.yunohost.org) to browse apps that can be installed on a server (though you can also explore it directly from your admin interface).
+Вы можете ознакомиться с [каталогом приложений](https://apps.yunohost.org), чтобы просмотреть приложения, которые могут быть установлены на сервере (хотя вы также можете ознакомиться с ним непосредственно из своего интерфейса администратора!)
 
-The [Community](/category/community) is here for you if you need some help: come [chat](/community/chat_rooms) with us or reach out on the [forum](/community/forum)!
+[Сообщество](/category/community) здесь для вас, если вам нужна помощь: присоединяйтесь к нам в [чат](/community/chat_rooms) или свяжитесь с нами на [форуме](/community/forum)!
 
 {/*
 TODO:
 
 [center]
 
-<a href="/admindoc" class="btn btn-lg btn-primary inline"><i class="fa fa-cogs"></i> Administrator's guide</a>
-<a href="/apps" class="btn btn-lg btn-success inline"><i class="fa fa-cubes"></i> Applications</a>
-<a href="/community" class="btn btn-lg btn-primary" style="background: blueviolet;border-color: blueviolet;"><i class="fa fa-users"></i> Community</a>
-<a href="/contribute" style="background: orange; border-color: orange;" class="btn btn-lg btn-error"><i class="fa fa-heart"></i> Get involved</a>
+<a href="/admindoc" class="btn btn-lg btn-primary inline"><i class="fa fa-cogs"></i> Гайды для администраторов</a>
+<a href="/apps" class="btn btn-lg btn-success inline"><i class="fa fa-cubes"></i> Приложения</a>
+<a href="/community" class="btn btn-lg btn-primary" style="background: blueviolet;border-color: blueviolet;"><i class="fa fa-users"></i> Сообщество</a>
+<a href="/contribute" style="background: orange; border-color: orange;" class="btn btn-lg btn-error"><i class="fa fa-heart"></i> Присоединиться</a>
 
 [/center]
 
 [center]
-<a href="https://yunohost.org/" class="btn btn-lg inline"><i class="fa fa-fw fa-arrow-left"></i> Go back to the homepage</a>
+<a href="https://yunohost.org/" class="btn btn-lg inline"><i class="fa fa-fw fa-arrow-left"></i> Вернуться на главную</a>
 [/center]
 
 :::tip
-To navigate this documentation, you can use your left and right arrow keys. Browse directly to the section you want with the <FAIcon icon="fa-bars"/> side panel, or using the <FAIcon icon="fa-search"/> search box. Enjoy!
+!!!! Для навигации по этой документации вы можете использовать клавиши со стрелками влево и вправо. Перейдите непосредственно к нужному разделу с помощью боковой панели [fa=bars /] или с помощью окна поиска [fa=search /]. Наслаждайтесь!
 :::
 
 */}
